--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<p>login works!</p>
+<!--<p>login works!</p>
 <form>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
@@ -14,4 +14,27 @@
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</form>-->
+<div class="container-md">
+  <div class="card">
+    <div class="card-body">
+      <h3>Connexion</h3>
+      <form name="form" (ngSubmit)="loginForm.form.valid && login()" #loginForm="ngForm" novalidate>
+        <div class="form-group">
+          <label for="exampleInputUsername">Nom d'utilisateur</label>
+          <input type="text" class="form-control" id="exampleInputUsername" aria-describedby="usernameHelp" name="username" [(ngModel)]="model.username" #username="ngModel">
+          <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Mot de passe</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" name="password" [(ngModel)]="model.password" #password="ngModel">
+        </div>
+        <!--<div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>-->
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+    </div>
+  </div>
+</div>
