fixed typo in URL and added a select tag to get all types of leaves

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,3 +1,9 @@
 <p>calendar works!</p>
 
-<p *ngFor="let leave of leaves | async">{{leave.leaveType}}</p>
+<!--<p *ngFor="let leave of leaves | async">{{leave.leaveType}}</p>-->
+
+<select>
+    <option *ngFor="let leave of leaves | async">
+        {{leave.leaveType}}
+    </option>
+</select>
