added manager content

--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,1 +1,29 @@
-<p>manager works!</p>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+      <h2>Demandes d'approbation</h2>
+    </div>
+    <div class="panel-body">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>De</th>
+            <th>Type</th>
+            <th>Du</th>
+            <th>Au</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr>
+            <td>User 3</td>
+            <td>congé</td>
+            <td>02/03/2021</td>
+            <td>03/03/2021</td>
+            <td><button class="btn btn-info" style="margin-left: 10px">Accepter</button>
+                <button class="btn btn-danger">Refuser</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
